Details
-
Bug
-
Resolution: Fixed
-
Blocker
-
5.1.3, 5.5.3, 6.0.1
-
Untriaged
-
Yes
Description
5.5.4-4334 - centos longevity - following memcached exit observed:
Service 'memcached' exited with status 139. Restarting. Messages:
2019-04-11T11:19:07.686740-07:00 WARNING (DISTRICT) Slow scheduling for NON_IO task 'Adjusting hash table sizes.' on thread nonIO_worker_0. Schedule overhead: 11 s
2019-04-11T11:19:07.686887-07:00 WARNING (HISTORY) Slow scheduling for NON_IO task 'Adjusting hash table sizes.' on thread nonIO_worker_0. Schedule overhead: 11 s
2019-04-11T11:19:07.687010-07:00 WARNING (ITEM) Slow scheduling for NON_IO task 'Adjusting hash table sizes.' on thread nonIO_worker_0. Schedule overhead: 11 s
2019-04-11T11:19:07.711580-07:00 WARNING (HISTORY) Slow runtime for 'Checkpoint Remover on vb 209' on thread nonIO_worker_2: 16 ms
2019-04-11T11:19:07.722746-07:00 WARNING 136: (HISTORY) DCP (Consumer) eq_dcpq:replication:ns_1@172.23.96.148->ns_1@172.23.96.56:HISTORY - vb:267 Got error 'no memory' while trying to process mutation with seqno:3116
2019-04-11T11:19:07.722998-07:00 WARNING (HISTORY) DCP (Consumer) eq_dcpq:replication:ns_1@172.23.97.239->ns_1@172.23.96.56:HISTORY - (vb 623) End stream received but no such stream for this vBucket
Logs: http://supportal.couchbase.com/snapshot/8ff7d91dd5a771c1904307a1f2f35743::0
Cluster: 172.23.108.103
console: http://172.23.109.231/job/centos-systest-launcher/1767/console
Attachments
Issue Links
- relates to
-
MB-31410 DCP Consumer tries to process out-of-order messages
-
- Closed
-
-
MB-31652 [BP 6.0.1] DCP Consumer tries to process out-of-order messages
-
- Closed
-
-
MB-31653 [BP 5.5.3] DCP Consumer tries to process out-of-order messages
-
- Closed
-
-
MB-31714 [BP 5.1.3] DCP Consumer tries to process out-of-order messages
-
- Closed
-
For Gerrit Dashboard: MB-33773 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
107959,1 | MB-33773: test code for now | vulcan | kv_engine | Status: ABANDONED | 0 | -1 |
107961,5 | MB-33773: Don't take a reference to a buffered item | vulcan | kv_engine | Status: MERGED | +2 | +1 |
108142,2 | MB-33773: Merge branch 'couchbase/vulcan' into 'couchbase/alice' | alice | kv_engine | Status: MERGED | +2 | +1 |
108216,3 | Merge branch 'couchbase/alice' into 'couchbase/master' | master | kv_engine | Status: MERGED | +2 | +1 |